install/scripts/yaml2/tunnel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel-server
  namespace: tunnel
  labels:
    app.kubernetes.io/name: tunnel-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tunnel-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tunnel-server
    spec:
      volumes:
        - name: tunnel-conf
          configMap:
            name: tunnel-server-conf
            items:
              - key: start.sh
                path: start.sh
        - name: ssh
          secret:
            secretName: ssh
            optional: false
            defaultMode: 0700
      containers:
        - name: tunnel-server-gateway
          image: docker-command:latest
          imagePullPolicy: Never
          #command: ["/bin/sh", "-c", "sleep 10000"]
          volumeMounts:
            - name: tunnel-conf
              readOnly: true
              mountPath: /tmp/conf
            # kubectl create -n tunnel secret generic ssh --from-file=id_rsa=~/.ssh/id_rsa_tunnel
            - name: ssh
              readOnly: true
              mountPath: "/tmp/ssh"
